# word-counter

./: Dockerfile  README.md  coding-task.cabal  word-counter.cabal
.github/workflows/: haskell-ci.yml
app/: Main.hs
lib/: WordCounter.hs
test/: Spec.hs
