cabal-version:      3.4
name:               word-counter
version:            0.1.0.0
synopsis:           Counts words in a text file.
description:        Counts the amount of occurrences of each word in a text file.
license:            GPL-3.0-only
license-file:       LICENSE
author:             Frederik Krogsdal Jacobsen
maintainer:         fkjacobsen@gmail.com
category:           Text
build-type:         Simple
tested-with:        GHC ==9.4.8
extra-source-files: test-data/*.txt

source-repository head
    type:              git
    location:          git://github.com/fkj/word-counter

common common-options
    ghc-options: -Wall
    build-depends: base ^>=4.17.2.1

executable word-counter
    import:           common-options
    main-is:          Main.hs
    build-depends:    word-counter
    hs-source-dirs:   app
    default-language: GHC2021

library
    import:           common-options
    build-depends:    hashtables ^>=1.3.1
                    , text >= 2.0.2 && <= 2.1.1
    hs-source-dirs:   lib
    exposed-modules:  WordCounter
    default-language: GHC2021

test-suite tests
    import:           common-options
    type:             exitcode-stdio-1.0
    default-language: GHC2021
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    hspec ^>=2.11.9
                    , QuickCheck ^>=2.15.0.1
                    , word-counter
                    , text >= 2.0.2 && <= 2.1.1
                    , quickcheck-text ^>= 0.1.2.1